--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
           <target>17</target>
         </configuration>
       </plugin>
-    </plugins>
+    </plugins>S
   </build>
 
   <dependencies>
