--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,7 @@
 name: Run API Tests
 
-on: [push] # Этот workflow запускается на каждый push
+on: push # Этот workflow запускается на каждый push
+    workflow_dispatch
 
 jobs:
   test:
